package ggc.notifications;

import ggc.util.Visitable;

import java.io.Serializable;

public abstract class Notification implements Visitable, Serializable {
}
