package ggc.partners;

public class Partner implements Comparable<Partner> {

    // TODO


    @Override
    public int compareTo(Partner partner) {
        // TODO
        return 0;
    }
}
